# TypePack

./: .gitignore  CMakeLists.txt  README.md  format-project.sh
include/TypePack/: Always.h  And.h  Apply.h  ApplyList.h  Bool.h  CoerceList.h  Compose.h  Concat.h  Contains.h  Defer.h  FindFirst.h  Fold.h  ForEachType.h  HasType.h  If.h  List.h  Not.h  Or.h  PushBack.h  PushFront.h  Quote.h  QuoteTrait.h  Size.h  SizeT.h  SplitList.h  T.h  Transform.h  TypeKeyed.h  TypeKeyedMap.h  TypeKeyedMap.h.orig  TypeKeyedTuple.h  TypePack.h  TypePack.h.orig  Void.h
scripts/: combine_headers.py
tests/: Apply.cpp  BasicListStructure.cpp  BooleanAnd.cpp  BooleanOr.cpp  CMakeLists.txt  Contains.cpp  Fold.cpp  IfExpressions.cpp  Main.cpp  Push.cpp  SplitList.cpp  TypePackTestShared.h
